--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,8 +33,10 @@ jobs:
           # Terraform
           TF_VERSION="1.4.6"
           curl -sSL "https://releases.hashicorp.com/terraform/${TF_VERSION}/terraform_${TF_VERSION}_linux_amd64.zip" -o terraform.zip
-          unzip -o terraform.zip
+          rm -rf tfbin
+          unzip -o terraform.zip -d tfbin
           sudo mv terraform /usr/local/bin/terraform
+          rm -rf tfbin terraform.zip
           terraform -version
 
           # Google Cloud CLI
