--- a/terraform/vault-values.yaml
+++ b/terraform/vault-values.yaml
@@ -12,8 +12,8 @@ server:
     seal "gcpckms" {
       project     = "instamini-auto"
       region      = "us-central1"
-      key_ring    = "vault-ha-keyring"
-      crypto_key  = "vault-auto-unseal"
+      key_ring    = "vault-ha-keyring-auto"
+      crypto_key  = "vault-auto-unseal-instamini"
     }
   # We'll override those "CHANGE_ME_*" from Terraform
   extraEnvironmentVars:
