--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
   build-test-deploy:
     runs-on: ubuntu-latest
     env:
-      # Set the env variable at the job level so all steps see it.
+      # This environment variable makes the service account key available for all steps.
       GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/gcp-key.json
 
     steps:
@@ -74,7 +74,7 @@ jobs:
       # 4) GCP Auth
       - name: GCP Auth
         run: |
-          # Write the key to a file in the workspace so it persists across steps.
+          # Write the service account key to a file in the workspace so it persists across steps.
           echo '${{ secrets.GCP_SA_KEY }}' | base64 --decode > $GITHUB_WORKSPACE/gcp-key.json
           gcloud auth activate-service-account --key-file=$GITHUB_WORKSPACE/gcp-key.json
           gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
