--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
   build-test-deploy:
     runs-on: ubuntu-latest
     env:
+      # This environment variable makes the service account key available for all steps.
       GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/gcp-key.json
 
     steps:
@@ -75,6 +76,8 @@ jobs:
       # 4) GCP Auth
       - name: GCP Auth
         run: |
+          # Write the service account key to a file in the workspace
+          # so it persists across steps.
           echo '${{ secrets.GCP_SA_KEY }}' | base64 --decode > $GITHUB_WORKSPACE/gcp-key.json
           gcloud auth activate-service-account --key-file=$GITHUB_WORKSPACE/gcp-key.json
           gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
@@ -83,8 +86,11 @@ jobs:
       - name: Terraform Import Keyring
         run: |
           cd terraform
-          terraform init -backend-config="bucket=tfstate-bucket-instamini" -backend-config="prefix=terraform/state"
-          terraform import google_kms_key_ring.vault_ring projects/instsmini-auto/locations/us-central1/keyRings/vault-ha-keyring || echo "KeyRing already imported"
+          terraform init -backend-config="bucket=tfstate-bucket-instamini" \
+                         -backend-config="prefix=terraform/state"
+          terraform import google_kms_key_ring.vault_ring \
+            projects/instsmini-auto/locations/us-central1/keyRings/vault-ha-keyring \
+            || echo "KeyRing already imported or does not exist"
 
       # 6) Test Python App (Optional)
       - name: Test Python App
@@ -112,7 +118,8 @@ jobs:
           TF_VAR_db_root_password: ${{ secrets.DB_ROOT_PASSWORD }}
         run: |
           cd terraform
-          terraform init -backend-config="bucket=tfstate-bucket-instamini" -backend-config="prefix=terraform/state"
+          terraform init -backend-config="bucket=tfstate-bucket-instamini" \
+                         -backend-config="prefix=terraform/state"
           terraform apply \
             -target=google_container_cluster.primary \
             -target=google_container_node_pool.primary_nodes \
@@ -188,8 +195,10 @@ jobs:
           kubectl wait --for=condition=available --timeout=300s deployment/argocd-server -n argocd
 
           ARGOCD_PW=$(kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d)
-
-          argocd login argocd-server.argocd.svc.cluster.local:443 --username admin --password "$ARGOCD_PW" --insecure --grpc-web
+          argocd login argocd-server.argocd.svc.cluster.local:443 \
+            --username admin \
+            --password "$ARGOCD_PW" \
+            --insecure --grpc-web
 
           argocd app create instamini \
             --repo https://github.com/casual-cat/instamini-project.git \
