--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
   build-test-deploy:
     runs-on: ubuntu-latest
     env:
+      # This environment variable makes the service account key available for all steps.
       GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/gcp-key.json
 
     steps:
@@ -58,6 +59,9 @@ jobs:
 
           # kubectl
           sudo apt-get install -y kubectl
+
+          # IMPORTANT: install the gke-gcloud-auth-plugin so kubectl can authenticate
+          sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
 
           # helm
           HELM_VERSION="v3.12.0"
@@ -227,7 +231,10 @@ jobs:
           kubectl wait --for=condition=available --timeout=300s deployment/argocd-server -n argocd
 
           ARGOCD_PW=$(kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d)
-          argocd login argocd-server.argocd.svc.cluster.local:443 --username admin --password "$ARGOCD_PW" --insecure --grpc-web
+          argocd login argocd-server.argocd.svc.cluster.local:443 \
+            --username admin \
+            --password "$ARGOCD_PW" \
+            --insecure --grpc-web
 
           argocd app create instamini \
             --repo https://github.com/casual-cat/instamini-project.git \
