--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,33 +2,34 @@ name: DevOps Final Project
 
 on:
   push:
-    branches: ["main"]
+    branches: [ "main" ]
   pull_request:
-    branches: ["main"]
+    branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
   build-test-deploy:
     runs-on: ubuntu-latest
     env:
+      # Provide the service account key to all steps
       GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/gcp-key.json
 
     steps:
       ############################################################
       # 1) Check out code
       ############################################################
-      - name: Checkout repository
+      - name: Check out repository
         uses: actions/checkout@v3
 
       ############################################################
       # 2) Debug listing
       ############################################################
-      - name: List repository structure (debug)
+      - name: List repository
         run: |
-          echo "Listing root directory:"
+          echo "Root directory:"
           ls -la
-          echo "Listing contents of 'terraform' folder:"
-          ls -la terraform || echo "'terraform' folder not found"
+          echo "Terraform folder:"
+          ls -la terraform || true
 
       ############################################################
       # 3) Install Dependencies
@@ -41,25 +42,20 @@ jobs:
           # Terraform
           TF_VERSION="1.4.6"
           curl -sSL "https://releases.hashicorp.com/terraform/${TF_VERSION}/terraform_${TF_VERSION}_linux_amd64.zip" -o terraform.zip
-          rm -rf tfbin
-          unzip -o terraform.zip -d tfbin
-          sudo mv tfbin/terraform /usr/local/bin/terraform
+          unzip terraform.zip
+          sudo mv terraform /usr/local/bin/
           sudo chmod +x /usr/local/bin/terraform
-          export PATH="/usr/local/bin:$PATH"
-          rm -rf tfbin terraform.zip
           terraform -version
 
           # Google Cloud CLI
-          echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" \
-            | sudo tee /etc/apt/sources.list.d/cloud-sdk.list
-          curl https://packages.cloud.google.com/apt/doc/apt-key.gpg \
-            | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
+          echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee /etc/apt/sources.list.d/cloud-sdk.list
+          curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
           sudo apt-get update && sudo apt-get install -y google-cloud-cli
 
           # kubectl
           sudo apt-get install -y kubectl
 
-          # install the gke-gcloud-auth-plugin
+          # gke-gcloud-auth-plugin
           sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
 
           # helm
@@ -67,17 +63,15 @@ jobs:
           curl -sSL "https://get.helm.sh/helm-${HELM_VERSION}-linux-amd64.tar.gz" -o helm.tar.gz
           tar xvf helm.tar.gz
           sudo mv linux-amd64/helm /usr/local/bin/helm
-          rm -rf helm.tar.gz linux-amd64
 
           # Vault CLI
           VAULT_VERSION="1.14.2"
           curl -fsSL "https://releases.hashicorp.com/vault/${VAULT_VERSION}/vault_${VAULT_VERSION}_linux_amd64.zip" -o vault.zip
           unzip vault.zip
           sudo mv vault /usr/local/bin/
-          rm vault.zip
           vault version
 
-          # Python requirements
+          # Python deps
           pip3 install --upgrade pip
           pip3 install -r requirements.txt || true
 
@@ -98,12 +92,10 @@ jobs:
           cd terraform
           terraform init -backend-config="bucket=tfstate-bucket-instamini" \
                          -backend-config="prefix=terraform/state"
-          terraform import google_kms_key_ring.vault_ring \
-            projects/instsmini-auto/locations/us-central1/keyRings/vault-ha-keyring \
-            || echo "KeyRing doesn't exist or already imported"
+          terraform import google_kms_key_ring.vault_ring projects/instsmini-auto/locations/us-central1/keyRings/vault-ha-keyring || echo "KeyRing doesn't exist or already imported"
 
       ############################################################
-      # 6) (Optional) Test Python App
+      # 6) Test Python App (Optional)
       ############################################################
       - name: Test Python App
         env:
@@ -116,13 +108,12 @@ jobs:
           python3 -m unittest discover -s tests
 
       ############################################################
-      # 7A) Check if GKE cluster already exists
+      # 7A) Check if GKE cluster exists
       ############################################################
       - name: Check if cluster exists
         id: clustercheck
         run: |
-          EXISTING=$(gcloud container clusters list \
-            --filter="name=vault-ha-cluster" --format="value(name)" || true)
+          EXISTING=$(gcloud container clusters list --filter="name=vault-ha-cluster" --format="value(name)" || true)
           if [ "$EXISTING" == "vault-ha-cluster" ]; then
             echo "cluster_exists=true" >> $GITHUB_OUTPUT
           else
@@ -130,7 +121,7 @@ jobs:
           fi
 
       ############################################################
-      # 7B) Conditionally Create Cluster + Node Pool
+      # 7B) Conditionally create cluster+nodepool
       ############################################################
       - name: Terraform Apply (Create Cluster)
         if: steps.clustercheck.outputs.cluster_exists == 'false'
@@ -153,16 +144,14 @@ jobs:
             -auto-approve
 
       ############################################################
-      # 7C) Update Kubeconfig
+      # 7C) Configure Kubeconfig
       ############################################################
       - name: Configure Kubeconfig
         run: |
-          gcloud container clusters get-credentials vault-ha-cluster \
-            --zone ${{ secrets.GCP_ZONE }} \
-            --project ${{ secrets.GCP_PROJECT_ID }}
+          gcloud container clusters get-credentials vault-ha-cluster --zone ${{ secrets.GCP_ZONE }} --project ${{ secrets.GCP_PROJECT_ID }}
 
       ############################################################
-      # 7D) Terraform Apply (KMS + Vault, etc.)
+      # 7D) Terraform Apply (KMS + Vault, local-exec init)
       ############################################################
       - name: Terraform Apply (KMS + Vault)
         env:
@@ -181,7 +170,7 @@ jobs:
       ############################################################
       # 8) Create MySQL Secret
       ############################################################
-      - name: Create Kubernetes MySQL Secret
+      - name: Create MySQL Secret
         run: |
           gcloud container clusters get-credentials vault-ha-cluster --zone ${{ secrets.GCP_ZONE }} --project ${{ secrets.GCP_PROJECT_ID }}
           kubectl delete secret mysite-db-secrets -n default --ignore-not-found=true
@@ -212,9 +201,7 @@ jobs:
       ############################################################
       - name: Configure kubectl (again)
         run: |
-          gcloud container clusters get-credentials vault-ha-cluster \
-            --zone ${{ secrets.GCP_ZONE }} \
-            --project ${{ secrets.GCP_PROJECT_ID }}
+          gcloud container clusters get-credentials vault-ha-cluster --zone ${{ secrets.GCP_ZONE }} --project ${{ secrets.GCP_PROJECT_ID }}
 
       ############################################################
       # 11) Install Argo CD & Create App
@@ -232,10 +219,7 @@ jobs:
           kubectl wait --for=condition=available --timeout=300s deployment/argocd-server -n argocd
 
           ARGOCD_PW=$(kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d)
-          argocd login argocd-server.argocd.svc.cluster.local:443 \
-            --username admin \
-            --password "$ARGOCD_PW" \
-            --insecure --grpc-web
+          argocd login argocd-server.argocd.svc.cluster.local:443 --username admin --password "$ARGOCD_PW" --insecure --grpc-web
 
           argocd app create instamini \
             --repo https://github.com/casual-cat/instamini-project.git \
@@ -269,36 +253,3 @@ jobs:
           done
           echo "No external IP assigned after 10 tries."
           exit 1
-
-      ############################################################
-      # 13) (Optional) Create the K8S SA & CRB + Vault-Init Job
-      ############################################################
-      - name: Configure Vault K8S Auth
-        run: |
-          # 13a) Create the SA & clusterrolebinding
-          cat <<EOF | kubectl apply -f -
-          apiVersion: v1
-          kind: ServiceAccount
-          metadata:
-            name: vault-admin-sa
-            namespace: vault
-          ---
-          apiVersion: rbac.authorization.k8s.io/v1
-          kind: ClusterRoleBinding
-          metadata:
-            name: vault-admin-sa-crb
-          subjects:
-          - kind: ServiceAccount
-            name: vault-admin-sa
-            namespace: vault
-          roleRef:
-            kind: ClusterRole
-            name: system:auth-delegator
-            apiGroup: rbac.authorization.k8s.io
-          EOF
-
-          # 13b) Now apply your vault-init-job.yaml (which sets token_reviewer_jwt)
-          kubectl apply -f vault-init-job.yaml -n vault
-
-          # 13c) Wait for completion
-          kubectl wait --for=condition=complete job/vault-init-job -n vault --timeout=180s
