--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
           # Terraform
           TF_VERSION="1.4.6"
           curl -sSL "https://releases.hashicorp.com/terraform/${TF_VERSION}/terraform_${TF_VERSION}_linux_amd64.zip" -o terraform.zip
-          unzip terraform.zip
+          unzip -o terraform.zip
           sudo mv terraform /usr/local/bin/
           sudo chmod +x /usr/local/bin/terraform
           terraform -version
