--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,9 +42,12 @@ jobs:
           # Terraform
           TF_VERSION="1.4.6"
           curl -sSL "https://releases.hashicorp.com/terraform/${TF_VERSION}/terraform_${TF_VERSION}_linux_amd64.zip" -o terraform.zip
-          unzip -o terraform.zip
-          sudo mv terraform /usr/local/bin/
+          rm -rf tfbin
+          unzip -o terraform.zip -d tfbin
+          sudo mv tfbin/terraform /usr/local/bin/terraform
           sudo chmod +x /usr/local/bin/terraform
+          export PATH="/usr/local/bin:$PATH"
+          rm -rf tfbin terraform.zip
           terraform -version
 
           # Google Cloud CLI
