--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -185,8 +185,15 @@ jobs:
             --from-literal=MYSQL_DB=${{ secrets.MYSQL_DB }}
 
       ############################################################
-      # 9) Docker Build & Push
+      # 9) Login to Docker Hub & Build/Push
       ############################################################
+      # (FIX) Added the "docker/login-action" step first
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
       - name: Docker Build & Push
         uses: docker/build-push-action@v2
         with:
@@ -195,9 +202,6 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/instamini:v3
           platforms: linux/amd64
-        env:
-          DOCKER_LOGIN_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-          DOCKER_LOGIN_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       ############################################################
       # 10) Re-Configure kubectl
