--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,7 +88,7 @@ jobs:
           gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
 
       ############################################################
-      # 5) Terraform Import KeyRing (Optional)
+      # 5) Terraform Import Keyring (Optional)
       ############################################################
       - name: Terraform Import Keyring
         run: |
@@ -187,7 +187,6 @@ jobs:
       ############################################################
       # 9) Login to Docker Hub & Build/Push
       ############################################################
-      # (FIX) Added the "docker/login-action" step first
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
