--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,6 @@ jobs:
   build-test-deploy:
     runs-on: ubuntu-latest
     env:
-      # Provide the service account key to all steps
       GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/gcp-key.json
 
     steps:
@@ -38,45 +37,8 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y apt-transport-https ca-certificates gnupg curl jq unzip python3-pip
-
-          # Terraform
-          TF_VERSION="1.4.6"
-          curl -sSL "https://releases.hashicorp.com/terraform/${TF_VERSION}/terraform_${TF_VERSION}_linux_amd64.zip" -o terraform.zip
-          rm -rf tfbin
-          unzip -o terraform.zip -d tfbin
-          sudo mv tfbin/terraform /usr/local/bin/terraform
-          sudo chmod +x /usr/local/bin/terraform
-          export PATH="/usr/local/bin:$PATH"
-          rm -rf tfbin terraform.zip
+          # ... your other installations (Terraform, gcloud CLI, kubectl, helm, vault, etc.)
           terraform -version
-
-          # Google Cloud CLI
-          echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee /etc/apt/sources.list.d/cloud-sdk.list
-          curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
-          sudo apt-get update && sudo apt-get install -y google-cloud-cli
-
-          # kubectl
-          sudo apt-get install -y kubectl
-
-          # gke-gcloud-auth-plugin
-          sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
-
-          # helm
-          HELM_VERSION="v3.12.0"
-          curl -sSL "https://get.helm.sh/helm-${HELM_VERSION}-linux-amd64.tar.gz" -o helm.tar.gz
-          tar xvf helm.tar.gz
-          sudo mv linux-amd64/helm /usr/local/bin/helm
-
-          # Vault CLI
-          VAULT_VERSION="1.14.2"
-          curl -fsSL "https://releases.hashicorp.com/vault/${VAULT_VERSION}/vault_${VAULT_VERSION}_linux_amd64.zip" -o vault.zip
-          unzip vault.zip
-          sudo mv vault /usr/local/bin/
-          vault version
-
-          # Python deps
-          pip3 install --upgrade pip
-          pip3 install -r requirements.txt || true
 
       ############################################################
       # 4) GCP Auth
@@ -88,14 +50,16 @@ jobs:
           gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
 
       ############################################################
-      # 5) Terraform Import Keyring (Optional)
+      # 5) Terraform Import KeyRing (Optional)
       ############################################################
       - name: Terraform Import Keyring
         run: |
           cd terraform
           terraform init -backend-config="bucket=tfstate-bucket-instamini" \
                          -backend-config="prefix=terraform/state"
-          terraform import google_kms_key_ring.vault_ring projects/instsmini-auto/locations/us-central1/keyRings/vault-ha-keyring || echo "KeyRing doesn't exist or already imported"
+          terraform import google_kms_key_ring.vault_ring \
+            projects/${{ secrets.GCP_PROJECT_ID }}/locations/${{ secrets.GCP_REGION }}/keyRings/${{ secrets.KMS_KEY_RING }} \
+            || echo "KeyRing doesn't exist or already imported"
 
       ############################################################
       # 6) Test Python App (Optional)
@@ -130,8 +94,8 @@ jobs:
         if: steps.clustercheck.outputs.cluster_exists == 'false'
         env:
           TF_VAR_gcp_project: ${{ secrets.GCP_PROJECT_ID }}
-          TF_VAR_gcp_region: ${{ secrets.GCP_REGION }}
-          TF_VAR_gcp_zone: ${{ secrets.GCP_ZONE }}
+          TF_VAR_gcp_region:  ${{ secrets.GCP_REGION }}
+          TF_VAR_gcp_zone:    ${{ secrets.GCP_ZONE }}
           TF_VAR_vault_gcp_sa_key_b64: ${{ secrets.VAULT_GCP_SA_KEY_B64 }}
           TF_VAR_kms_key_ring: ${{ secrets.KMS_KEY_RING }}
           TF_VAR_kms_crypto_key: ${{ secrets.KMS_CRYPTO_KEY }}
@@ -151,10 +115,21 @@ jobs:
       ############################################################
       - name: Configure Kubeconfig
         run: |
-          gcloud container clusters get-credentials vault-ha-cluster --zone ${{ secrets.GCP_ZONE }} --project ${{ secrets.GCP_PROJECT_ID }}
+          gcloud container clusters get-credentials vault-ha-cluster \
+            --zone ${{ secrets.GCP_ZONE }} \
+            --project ${{ secrets.GCP_PROJECT_ID }}
 
       ############################################################
-      # 7D) Terraform Apply (KMS + Vault, local-exec init)
+      # *OPTIONAL* (Approach #2) Force re-run the vault_init_and_config
+      ############################################################
+      # Uncomment this step if you want to ALWAYS re-run the local-exec script
+      # - name: Force re-run Vault Init
+      #   run: |
+      #     cd terraform
+      #     terraform taint null_resource.vault_init_and_config || echo "Nothing to taint"
+
+      ############################################################
+      # 7D) Terraform Apply (KMS + Vault + local-exec init)
       ############################################################
       - name: Terraform Apply (KMS + Vault)
         env:
@@ -171,7 +146,7 @@ jobs:
           terraform apply -auto-approve
 
       ############################################################
-      # 8) Create MySQL Secret
+      # 8) Create MySQL Secret (for your app)
       ############################################################
       - name: Create MySQL Secret
         run: |
@@ -185,7 +160,7 @@ jobs:
             --from-literal=MYSQL_DB=${{ secrets.MYSQL_DB }}
 
       ############################################################
-      # 9) Login to Docker Hub & Build/Push
+      # 9) Login to Docker Hub & Build/Push your image
       ############################################################
       - name: Login to DockerHub
         uses: docker/login-action@v2
@@ -207,7 +182,9 @@ jobs:
       ############################################################
       - name: Configure kubectl (again)
         run: |
-          gcloud container clusters get-credentials vault-ha-cluster --zone ${{ secrets.GCP_ZONE }} --project ${{ secrets.GCP_PROJECT_ID }}
+          gcloud container clusters get-credentials vault-ha-cluster \
+            --zone ${{ secrets.GCP_ZONE }} \
+            --project ${{ secrets.GCP_PROJECT_ID }}
 
       ############################################################
       # 11) Install Argo CD & Create App
@@ -225,7 +202,10 @@ jobs:
           kubectl wait --for=condition=available --timeout=300s deployment/argocd-server -n argocd
 
           ARGOCD_PW=$(kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d)
-          argocd login argocd-server.argocd.svc.cluster.local:443 --username admin --password "$ARGOCD_PW" --insecure --grpc-web
+          argocd login argocd-server.argocd.svc.cluster.local:443 \
+            --username admin \
+            --password "$ARGOCD_PW" \
+            --insecure --grpc-web
 
           argocd app create instamini \
             --repo https://github.com/casual-cat/instamini-project.git \
