--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y apt-transport-https ca-certificates gnupg curl jq unzip python3-pip
 
-          # Install Terraform using official setup-terraform GitHub Action
+          # Install Terraform using the official setup-terraform GitHub Action
           - name: Set up Terraform
             uses: hashicorp/setup-terraform@v2
             with:
